Fixed issue with reference/note didn't have a z-index

--- a/src/scss/components/note.scss
+++ b/src/scss/components/note.scss
@@ -1,6 +1,7 @@
 .note {
 	display: none;
 	position: absolute;
+	z-index: 100;
 	top: 120%;
 	left: 0;
 	min-width: 35em;
